--- a/src/loader/bower.json
+++ b/src/loader/bower.json
@@ -14,6 +14,7 @@
         "tests"
     ],
     "dependencies": {
+        "angular-route": "~1.3.12",
         "angularjs": "~1.3.12",
         "bootstrap": "~3.3.2",
         "requirejs": "~2.1.15",
