--- a/src/core/core.csproj
+++ b/src/core/core.csproj
@@ -73,6 +73,7 @@
     <TypeScriptCompile Include="..\thirdparty\resources\thirdparty.d\tsd.d.ts">
       <Link>resources\tsd.d.ts</Link>
     </TypeScriptCompile>
+    <TypeScriptCompile Include="resources\sap\cloud\core\util\NamingUtil.ts" />
     <TypeScriptCompile Include="resources\sap\cloud\logging\Logger.ts" />
     <TypeScriptCompile Include="resources\sap\cloud\logging\SimpleLogger.ts" />
     <TypeScriptCompile Include="resources\sap\cloud\logging\LogManager.ts" />
@@ -92,13 +93,13 @@
     <Content Include="resources\sap\sbo\ng4c\launchpad\dashboard\Dashboard.html" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\aside\Modules.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\aside\MoudulesTree.ts" />
+    <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\dashboard\tiles\Kpi.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\Scope.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\aside\Menu.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\aside\MyMenu.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\aside\LightAccess.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\aside\Tab.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\dashboard\Dashboard.ts" />
-    <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\dashboard\tiles\KpiTile.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\Launchpad.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ng4c\launchpad\aside\Aside.ts" />
     <TypeScriptCompile Include="resources\sap\sbo\ui\controls\Tree.ts" />
@@ -139,7 +140,7 @@
     <Content Include="resources\themes\dracula\sap\sbo\ng4c\launchpad\aside\LightAccess.less" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="resources\themes\dracula\sap\sbo\ng4c\launchpad\dashboard\tiles\KpiTile.less" />
+    <Content Include="resources\themes\dracula\sap\sbo\ng4c\launchpad\dashboard\tiles\Kpi.less" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)' == 'Release'">
     <TypeScriptOutFile>$(RootNamespace).js</TypeScriptOutFile>
